[package]
name = "arcus-thunder"
version = "0.2.0"
authors = ["Ben Johnson <ben.fisher.johnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.6.5"
